[package]
name = "silkenweb-ui5-showcase"
description = "Showcase Silkenweb UI5 Components"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
categories = ["wasm"]
edition = "2021"
readme=true

[lib]
crate-type = ["cdylib"]

[dependencies]
silkenweb = { path = "../../crates/silkenweb" }
silkenweb-ui5 = { path = "../../crates/ui5" }
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1"
parse-display = "0.5"
web-log= "1.0"

[dev-dependencies]
js-sys = "0.3"
