[package]
name = "silkenweb-ui5-showcase"
description = "Showcase Silkenweb UI5 Components"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
categories = ["wasm"]
edition = "2021"
readme=true

[dependencies]
silkenweb = { path = "../../packages/silkenweb" }
futures-signals = "0.3"
silkenweb-ui5 = { path = "../../packages/ui5" }
wasm-bindgen = "=0.2.78"
console_error_panic_hook = "0.1"
parse-display = "0.5"
web-log= "1.0"

[dev-dependencies]
js-sys = "0.3"
