[package]
name = "silkenweb-example-web-components-wrapper"
description = "Silkenweb Web Components Wrapper Example"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
categories = ["wasm"]
edition = "2021"
readme = true

[dependencies]
silkenweb = { path = "../../packages/silkenweb" }
futures-signals = "0.3.31"
web-sys = "0.3.60"
parse-display = "0.8.0"
