[package]
name = "silkenweb-example-web-components-wrapper"
description = "Silkenweb Web Components Wrapper Example"
version = "0.1.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
categories = ["wasm"]
edition = "2021"
readme = true

[dependencies]
silkenweb = { workspace = true }
futures-signals = { workspace = true }
web-sys = { workspace = true }
parse-display = { workspace = true }
